terraform/modules/vpc/main.tf
provider "aws" {
  region = var.region
}

# VPC
resource "aws_vpc" "htvpc" {
  cidr_block           = var.vpc_cidr
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = merge(var.tags, { Name = "ht-prod-vpc" })
}

# Internet Gateway
resource "aws_internet_gateway" "htigw" {
  vpc_id = aws_vpc.htvpc.id
  tags   = merge(var.tags, { Name = "ht-prod-igw" })
}

# Public Subnets
resource "aws_subnet" "public" {
  count                   = length(var.public_subnet_cidrs)
  vpc_id                  = aws_vpc.htvpc.id
  cidr_block              = var.public_subnet_cidrs[count.index]
  availability_zone       = var.azs[count.index]
  map_public_ip_on_launch = true

  tags = merge(var.tags, { Name = "ht-prod-public-${count.index + 1}" })
}

# Private Subnets
resource "aws_subnet" "private" {
  count             = length(var.private_subnet_cidrs)
  vpc_id            = aws_vpc.htvpc.id
  cidr_block        = var.private_subnet_cidrs[count.index]
  availability_zone = var.azs[count.index]

  tags = merge(var.tags, { Name = "ht-prod-private-${count.index + 1}" })
}

# Elastic IP for NAT Gateway
resource "aws_eip" "nat" {
  domain = "vpc"
  tags   = merge(var.tags, { Name = "ht-prod-nat-eip" })
}

# NAT Gateway (created in the first public subnet)
resource "aws_nat_gateway" "htnat" {
  allocation_id = aws_eip.nat.id
  subnet_id     = aws_subnet.public[0].id
  tags          = merge(var.tags, { Name = "ht-prod-nat" })

  depends_on = [aws_internet_gateway.htigw]
}

# Public Route Table
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.htvpc.id
  tags   = merge(var.tags, { Name = "ht-prod-public-rt" })
}

# Route for Internet in Public Route Table
resource "aws_route" "public_internet" {
  route_table_id         = aws_route_table.public.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.htigw.id
}

# Associate Public Subnets with Public Route Table
resource "aws_route_table_association" "public_assoc" {
  count          = length(var.public_subnet_cidrs)
  subnet_id      = aws_subnet.public[count.index].id
  route_table_id = aws_route_table.public.id
}

# Private Route Table
resource "aws_route_table" "private" {
  vpc_id = aws_vpc.htvpc.id
  tags   = merge(var.tags, { Name = "ht-prod-private-rt" })
}

# Route for NAT Gateway in Private Route Table
resource "aws_route" "private_nat" {
  route_table_id         = aws_route_table.private.id
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id         = aws_nat_gateway.htnat.id
}

# Associate Private Subnets with Private Route Table
resource "aws_route_table_association" "private_assoc" {
  count          = length(var.private_subnet_cidrs)
  subnet_id      = aws_subnet.private[count.index].id
  route_table_id = aws_route_table.private.id
}
